// Copyright (c) 2016-present, Facebook, Inc.
// All rights reserved.
//
// This source code is licensed under the BSD-style license found in the
// LICENSE file in the root directory of this source tree. An additional grant
// of patent rights can be found in the PATENTS file in the same directory.

syntax = "proto3";

import "orc8r/protos/common.proto";

package magma.cwf;
option go_package = "magma/cwf/cloud/go/protos";

// --------------------------------------------------------------------------
// UE config
// --------------------------------------------------------------------------
message UEConfig {
    // Unique identifier for the UE.
    string imsi = 1;

    // Authentication key (k).
    bytes auth_key = 2;

    // Operator configuration field (Op) signed with authentication key (k).
    bytes auth_opc = 3;
}

// --------------------------------------------------------------------------
// UE Simulator service definition
// --------------------------------------------------------------------------
service UESim {
    // Adds a new UE to the store.
    // Throws ALREADY_EXISTS if the UE already exists.
    //
    rpc AddUE (UEConfig) returns (orc8r.Void) {}
}
